@@ -128,6 +128,39 @@ Registration in ``configure.zcml`` (assume its in the same directory):
     </configure>
 
 
+Updating objects with progress logging
+--------------------------------------
+
+Since an upgrade step often updates a set of objects indexed in the catalog,
+there is a useful helper method combining querying the catalog with the
+`ProgressLogger` (see below).
+The catalog is queried unrestricted so that we handle all the objects.
+
+Here is an example for updating all objects of a particular type:
+
+.. code:: python
+
+    from ftw.upgrade import ProgressLogger
+    from ftw.upgrade import UpgradeStep
+
+    class ExcludeFilesFromNavigation(UpgradeStep):
+
+       def __call__(self):
+           for obj in self.objects({'portal_type': 'File'},
+                                   'Enable exclude from navigation for files'):
+               obj.setExcludeFromNav(True)
+
+
+When running the upgrade step you'll have a progress log::
+
+    INFO ftw.upgrade STARTING Enable exclude from navigation for files
+    INFO ftw.upgrade 1 of 10 (10%): Enable exclude from navigation for files
+    INFO ftw.upgrade 5 of 50 (50%): Enable exclude from navigation for files
+    INFO ftw.upgrade 10 of 10 (100%): Enable exclude from navigation for files
+    INFO ftw.upgrade DONE: Enable exclude from navigation for files
+
+
+
 Methods
 -------
 
@@ -136,6 +169,11 @@ The ``UpgradeStep`` class has various helper functions:
 
 ``self.getToolByName(tool_name)``
     Returns the tool with the name ``tool_name`` of the upgraded site.
+
+``objects(catalog_query, message, logger=None)``
+    Queries the catalog (unrestricted) and an iterator with full objects.
+    The iterator configures and calls a ``ProgressLogger`` with the
+    passed ``message``.
 
 ``self.catalog_rebuild_index(name)``
     Reindex the ``portal_catalog`` index identified by ``name``.
